--- a/app/build.gradle
+++ b/app/build.gradle
@@ -28,4 +28,7 @@ dependencies {
     compile 'com.android.support:design:24.2.1'
     testCompile 'junit:junit:4.12'
     compile files('libs/jsoup-1.10.1.jar')
+    compile 'com.google.firebase:firebase-ads:9.6.1'
 }
+
+apply plugin: 'com.google.gms.google-services'
